--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "zustand_tutorial",
-    "slug": "zustand_tutorial",
+    "name": "Zustand",
+    "slug": "Build with love",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
