--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
